Fix scrollbar issue in the landing page

--- a/website/src/styles/globals.css
+++ b/website/src/styles/globals.css
@@ -38,3 +38,29 @@ code > span {
 .astro-code {
   @apply bg-semi-dark-gray rounded-md my-3 p-5;
 }
+
+html,
+body {
+  color-scheme: dark;
+  overflow-x: hidden;
+}
+
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: #888;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
